# lakedrop

./: CHANGELOG.md  CHANGELOG.zh.md  LICENSE  README.md  README.zh.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
public/samples/: sample.arrow  sample.csv
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/samples/: sample.jsonl  sample.parquet  sample.xlsx
src-tauri/src/: lib.rs  main.rs
src/locales/: en.json  zh.json
