[package]
name = "lakedrop"
version = "0.1.0"
description = "LakeDrop desktop app"
authors = ["you"]
edition = "2021"
default-run = "lakedrop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lakedrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
polars = { version = "0.41", features = ["lazy", "sql", "parquet", "json", "ipc", "csv", "decompress", "temporal"] }
flate2 = "1"
umya-spreadsheet = "1"
calamine = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
